# UdpScanner

./: .gitignore
cpp_tag_debian12/: CMakeLists.txt  main.cpp  settings.env
cpp_tag_debian12/src/Application/: TagPing.h
cpp_tag_debian12/src/Contracts/: TagRequest.h  TagResponse.h
cpp_tag_debian12/src/Payload/: TagPayload.h
cpp_tag_debian12/src/Settings/: Settings.h
cpp_tag_debian12/src/Shared/: Shared.h
cpp_tag_win10/: CMakeLists.txt  main.cpp
cpp_tag_win10/src/Contracts/: TagRequest.h  TagResponse.h
cpp_tag_win10/src/Payload/: TagPayload.h
cpp_tag_win10/src/Payloads/: ScannerPayload.h  TagPayload.h
cpp_tag_win10/src/Shared/: Shared.h
cpp_tag_win10/src/Tag/: TagPing.h
dotNet/: Udp_Network_Scaner.sln
dotNet/Contracts/: Contracts.csproj  ScannerPayload.cs  TagPayload.cs
dotNet/Contracts/Services/: UdpScanner.cs
dotNet/Scanner/: Program.cs  Scanner.csproj  UdpScanner.cs
dotNet/ScannerWpf/: App.xaml  App.xaml.cs  Bootstrapper.cs  HelloBootstrapper.cs  MainWindow.xaml  MainWindow.xaml.cs  ScannerWpf.csproj
dotNet/ScannerWpf/Models/: LogMessageModel.cs  TagResponseModel.cs
dotNet/ScannerWpf/ViewModels/: ShellViewModel.cs
dotNet/ScannerWpf/Views/: ShellView.xaml  ShellView.xaml.cs
dotNet/Tag/: .env  Program.cs  SystemInfoCollector.cs  Tag.csproj
